--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,4 @@
 yors_comfyui_node_setup
-cmake
-fairscale>=0.4.4
-git+https://github.com/WASasquatch/img2texture.git
-gitpython
-imageio
-joblib
-matplotlib
-numba
-numpy<1.24>=1.18
-opencv-python-headless[ffmpeg]<=4.7.0.72
-pilgram
-git+https://github.com/WASasquatch/ffmpy.git
-rembg
-scikit-image==0.20.0
-scikit-learn
-scipy
-timm>=0.4.12
-tqdm
-transformers==4.26.1
+yors_pano_ansi_color
+yors_pano_zero_field
+yors_pano_list_util
